// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error slot 1`] = `
<div role="feed" class="ghb-list">
  <div class="ghb-list__error-text">Custom Error</div>
  <div class="ghb-list__placeholder"></div>
</div>
`;

exports[`finished slot 1`] = `
<div role="feed" class="ghb-list">
  <div class="ghb-list__finished-text">Custom Finished</div>
  <div class="ghb-list__placeholder"></div>
</div>
`;
